--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <li> 1. Information Security </li>
                     <li>2. Network Security </li>
                     <li>3. Cryptography </li>
-                    <li>4. Stegnography </li>
+                    <li>4. Steganography </li>
                     <li>5. WAPT</li>
                     <li>6. VAPT</li>
                     <li>7. Linux & Virtual Machines </li>
@@ -152,8 +152,8 @@
                     </div>
                     <div class="edu-details">
                         <h3>Higher Secondary</h3>
-                        <h4>Bal Bharati Public School</h4>
-                        <h4>Noida. 2005 → 2020</h4>
+                        <h4>Bal Bharati Public School, Noida</h4>
+                        <h4>2005 → 2020</h4>
                         <h5>[+2 CGPA - 8.7 (PCMB + PSYCH)]</h5>
                         <p>I completed my Higher Secondary Education at Bal Bharati Public School, Noida. This
                             institution stands among the highly reputed schools in the locality, known for its
@@ -234,7 +234,7 @@
                     <div class="exp-details">
                         <h4>1. ARP Spoof Analyser → <a href="https://github.com/AChopra02/ARP-Spoof-Analyser"
                                 target="_blank"><u>Project</u></a></h4>
-                        <p>It's a python script that uses the Scapy library to perform ARP (Address Resolution Protocol)
+                        <p>It's a Python script that uses the Scapy library to perform ARP (Address Resolution Protocol)
                             monitoring on a Wi-Fi interface. The script appears to check<br> for ARP packets and then
                             analyzes the ARP table for dynamically assigned MAC addresses.If a MAC address is detected
                             multiple times, it raises an alert,<br> suggesting a potential attack.</p>
@@ -245,7 +245,7 @@
                     <div class="exp-details">
                         <h4>2. Keylogger → <a href="https://github.com/AChopra02/KeyLogger"
                                 target="_blank"><u>Project</u></a></h4>
-                        <p> It's a python script using the pynput library to monitor mouse and keyboard events. This
+                        <p> It's a Python script using the pynput library to monitor mouse and keyboard events. This
                             script logs mouse movements, clicks, and scrolls, as well as keyboard key presses. The logs
                             are then written to a file named "LogData.txt" with timestamps.</p>
                     </div>
@@ -268,7 +268,7 @@
                 </div>
                 <div class="exp-entry">
                     <div class="exp-details">
-                        <h4> 3. DeadFaceCTF - Ranked 73/1206 🏅🌟 [20th Oct - 22th Oct 2023]</h4>
+                        <h4> 3. DeadFaceCTF - Ranked 73/1206 🏅🌟 [20th Oct - 22nd Oct 2023]</h4>
                     </div>
                 </div>
                 <div class="exp-entry">
@@ -297,7 +297,7 @@
                     <img src="images/ncc.png" alt="NCC Icon">
                     <div class="exp-details">
                         <h4>Cadet of National Cadet Corps [University Level]</h4>
-                        <p>November 2021 - Present (2 Yr 1 Months)</p>
+                        <p>November 2021 - Present (2 Yr 1 Month)</p>
                         <p>I joined the National Cadet Corps (NCC) at the university level, pursuing my passion for
                             service and dedication to the nation. <br>Currently holding <b>Alpha (α) Grade</b> in NCC B
                             certificate.</p>
