--- a/index.html
+++ b/index.html
@@ -250,6 +250,13 @@
                             are then written to a file named "LogData.txt" with timestamps.</p>
                     </div>
                 </div>
+                <div class="exp-entry">
+                    <div class="exp-details">
+                        <h4>3. FrontEnd CV → <a href="https://aakashcv.netlify.app/"
+                                target="_blank"><u>Project</u></a></h4>
+                        <p>I independently designed and deployed my curriculum vitae (CV) using front-end technologies, hosted on Netlify, which also incorporates my comprehensive resume. This initiative demonstrates my proficiency in web development, showcasing both the aesthetic and functional aspects of user interface design. The CV, accessible online, presents my professional journey, skills, and achievements in a visually appealing and user-friendly format.</p>
+                    </div>
+                </div>
 
             </div>
 
