--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                 <h2>Photo Gallery</h2>
                 <BR>
                 <div class="gallery-images">
+                    <p><b>DSCI AISS 2023 Hackathon 👇
+                        </b></p>
+                    <img src="images/122.jpg" alt="Photo 1">
                     <p><b>CATC Camp 142 👇
                         </b></p>
                     <img src="images/CATC.jpg" alt="Photo 1">
@@ -281,6 +284,11 @@
                 <div class="exp-entry">
                     <div class="exp-details">
                         <h4> 4. SpookyCTF - Ranked 34/372 👏🏆 [27th Oct - 29th Oct 2023]</h4>
+                    </div>
+                </div>
+                 <div class="exp-entry">
+                    <div class="exp-details">
+                        <h4> 5. DSCI AISS 2023 Hackathon - Ranked 8/80+ 👏🏆 [19th Dec 2023]</h4>
                     </div>
                 </div>
 
