--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <div id="side_bar">
             <div class="img">
-                <img src="images\img2.png" alt="Profile Picture">
+                <img src="images\Pic.png" alt="Profile Picture">
             </div>
 
             <div class="nametag">
